# physical-education-statistics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: growth_dataset.csv  longitudinal_activity_dataset.csv  motor_competence_dataset.csv  motor_learning_experiment.csv  tgmd_dataset.csv
notebooks/: README.md  semana_01_estatistica_descritiva.py  semana_02_percentis_normativas.py  semana_03_correlacao.py  semana_04_regressao_simples.py  semana_05_regressao_multipla.py  semana_06_visualizacao_modelo_stodden.py  semana_07_comparacao_grupos.py  semana_08_predicao_risco.py  semana_09_crescimento_exploracao.py  semana_10_regressao_crescimento.py  semana_11_diagnostico_modelo.py  semana_12_interpretacao_coeficientes.py  semana_13_longitudinal_correlacao.py  semana_14_longitudinal_trajetorias.py  semana_15_introducao_modelos_mistos.py  semana_16_sintese_projeto_final.py
scripts/: generate_datasets.py
src/physical_education_statistics/: __init__.py  datasets.py
