[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-education-statistics"
version = "0.1.0"
description = "Plano de estudos em estatística aplicada ao desenvolvimento motor com notebooks marimo interativos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "marimo>=0.11.20",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "plotly>=5.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.marimo.runtime]
auto_instantiate = false

[tool.ruff]
line-length = 100
src = ["src", "notebooks", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
